# Vita-Recorder

./: CMakeLists.txt  README.md  VitaRecorder.yml  encoder.c  encoder.h  main.c  renderer.c  rescaler.c
